fixed spacing issue with room page

--- a/front-end-main/src/app/rooms/room/room.component.css
+++ b/front-end-main/src/app/rooms/room/room.component.css
@@ -1,6 +1,7 @@
 .viewportWrapper {
   width:100%;
-  height: 70vh;
+  height: 100%;
+  display: left;
 }
 
 .viewportParent
@@ -10,8 +11,8 @@
 }
 
 .userList {
-  float:inline-start;
-  height: 70vh;
+  float: left;
+  height: 100%;
   width: 15%;
   margin-right: 1%;
   border: 5px solid rgb(150, 150, 240);
@@ -67,7 +68,7 @@ button:disabled {
 
 
 .input{
-  margin-top: 1%;
+  margin-top: 2%;
   width: 83.5%;
   border: 5px solid rgb(150, 150, 240);
   border-radius: 0px;
